--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
   <div>
-    <div class="top-bar">แนะนำตัวเองdsadas</div>
+    <div class="top-bar">แนะนำตัวเอง777</div>
     <div class="container fade-in">
       <img id="pgg" src="images/bibi.webp" alt="" height="850px" width="520px">
       <h2>ชื่อของคุณ</h2>
