--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>แนะนำตัวเอง</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -34,10 +37,7 @@
       border-radius: 50px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       text-align: center;
-      opacity: 0;
-      visibility: hidden;
-      transform: translateY(30px);
-      transition: opacity 1s ease, transform 1s ease, visibility 1s ease;
+
     }
 
 
@@ -69,56 +69,137 @@
     .btn:hover {
       background: #9c27b0;
     }
+
+    #bibi {
+      display: none;
+      margin: 0 auto;
+      display: block;
+      width: 100%;
+      /* ขยายให้พอดีกับความกว้างของคอนเทนเนอร์ */
+      max-width: 520px;
+      /* กำหนดขนาดสูงสุด */
+    }
+
+    /* #showall {
+      display: flex; */
+    /* justify-content: center; */
+    /* จัดตำแหน่งกลางในแนวนอน */
+    /* align-items: center; */
+    /* จัดตำแหน่งกลางในแนวตั้ง */
+    /* height: 100px; */
+    /* กำหนดความสูงเต็มหน้าจอ */
+    /* width: 500px;
+      margin-left: 1000px;
+    } */
+    #inter-container {
+      display: flex;
+      justify-content: center;
+      /* จัดตำแหน่งภาพกลางแนวนอน */
+      align-items: center;
+      /* จัดตำแหน่งภาพกลางแนวตั้ง */
+      height: 100vh;
+      /* ให้คอนเทนเนอร์มีความสูงเต็มหน้าจอ */
+    }
+
+    #inter {
+      max-width: 100%;
+      /* ทำให้ภาพไม่เกินขนาดของคอนเทนเนอร์ */
+      height: auto;
+      /* ปรับขนาดภาพตามสัดส่วน */
+    }
+
+    #allshow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   </style>
 </head>
 
 <body>
   <div>
     <div class="top-bar">แนะนำตัวเอง77755</div>
-    <div class="container fade-in">
-      <img id="pgg" src="images/bibi.webp" alt="" height="850px" width="520px">
-      <h2>ชื่อของคุณ</h2>
-      <p>สวัสดี! ฉันคือ [ชื่อของคุณ] ฉันสนใจการพัฒนาเว็บไซต์และเทคโนโลยีใหม่ ๆ</p>
-      <a href="#" class="btn">ดูเพิ่มเติม</a>
-    </div>
-    <div class="container fade-in">
-      <h2>ประสบการณ์</h2>
-      <p>ฉันเคยทำงานในด้านการพัฒนาเว็บไซต์มากกว่า 3 ปี และมีความเชี่ยวชาญในการใช้ HTML, CSS, JavaScript รวมถึง Framework
-        ต่าง ๆ เช่น React และ Vue</p>
-    </div>
 
-    <div class="container fade-in">
-      <h2>ทักษะ</h2>
-      <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
-        <li>HTML / CSS / JavaScript</li>
-        <li>React / Vue</li>
-        <li>Node.js / Express</li>
-        <li>Git / GitHub</li>
-      </ul>
+    <div id="allshow">
+      <button id="showall" class="btn">แสดงทั้งหมด</button>
     </div>
+    <div id="all">
+      <div class="container">
+        <button id="bibishow" class="btn">กดสิจ๊ะ</button>
+        <br><br>
+        <img id="bibi" src="images/bibi.webp" alt="" height="850px" width="520px">
+        <br><br>
+        <h2>ชื่อของคุณ</h2>
+        <p>สวัสดี! ฉันคือ [ชื่อของคุณ] ฉันสนใจการพัฒนาเว็บไซต์และเทคโนโลยีใหม่ ๆ</p>
+        <button id="more" class="btn">ดูเพิ่มเติม</button>
+        <br><br>
+        <p id="pi">สวัสดี! ฉันคือ [ชื่อของคุณ] ฉันสนใจการพัฒนาเว็บไซต์และเทคโนโลยีใหม่ ๆ</p>
+      </div>
+      <div class="container">
+        <h2>ประสบการณ์</h2>
+        <p>ฉันเคยทำงานในด้านการพัฒนาเว็บไซต์มากกว่า 3 ปี และมีความเชี่ยวชาญในการใช้ HTML, CSS, JavaScript รวมถึง
+          Framework
+          ต่าง ๆ เช่น React และ Vue</p>
+      </div>
 
-    <div class="container fade-in">
-      <h2>ติดต่อ</h2>
-      <p>อีเมล: yourname@email.com</p>
-      <p>โทร: 012-345-6789</p>
+      <div class="container">
+        <h2>ทักษะ</h2>
+        <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
+          <li>HTML / CSS / JavaScript</li>
+          <li>React / Vue</li>
+          <li>Node.js / Express</li>
+          <li>Git / GitHub</li>
+        </ul>
+      </div>
+
+      <div class="container">
+        <h2>ติดต่อ</h2>
+        <p>อีเมล: yourname@email.com</p>
+        <p>โทร: 012-345-6789</p>
+      </div>
     </div>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-    // สร้าง observer เพื่อสังเกตเมื่อกล่องเข้าในมุมมอง
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          // เมื่อกล่องเข้าสู่หน้าจอให้เพิ่มคลาส 'visible'
-          entry.target.classList.add('visible');
+    document.addEventListener("DOMContentLoaded", function () {
+      // ซ่อนข้อความเมื่อโหลดหน้าเว็บ
+      document.getElementById('pi').style.display = 'none';
+
+      // เมื่อคลิกปุ่ม "#more"
+      document.getElementById('more').addEventListener('click', function () {
+        var pi = document.getElementById('pi');
+        if (pi.style.display === 'none') {
+          pi.style.display = 'block'; // แสดงข้อความ
+        } else {
+          pi.style.display = 'none'; // ซ่อนข้อความ
         }
       });
-    }, { threshold: 0 }); // ตรวจสอบเมื่อกล่องเริ่มเข้าในมุมมอง
 
-    // เริ่มต้นการสังเกตการณ์กับทุกกล่องที่มีคลาส 'fade-in'
-    document.querySelectorAll('.container').forEach(container => {
-      observer.observe(container);
+      document.getElementById('bibi').style.display = 'none';
+
+      document.getElementById('bibishow').addEventListener('click', function () {
+        var bibi = document.getElementById('bibi');
+        if (bibi.style.display === 'none') {
+          bibi.style.display = 'block'; // แสดงข้อความ
+        } else {
+          bibi.style.display = 'none'; // ซ่อนข้อความ
+        }
+      });
+
+      document.getElementById('all').style.display = 'none';
+
+      document.getElementById('showall').addEventListener('click', function () {
+        var all = document.getElementById('all');
+        if (all.style.display === 'none') {
+          all.style.display = 'block';
+        } else {
+          all.style.display = 'none';
+        }
+      });
+
     });
+
+
   </script>
 </body>
 
