--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url('images/99.jpg');
+      background-image: url('https://static.vecteezy.com/system/resources/previews/026/588/533/original/soft-colored-bokeh-background-vector.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
