--- a/index.html
+++ b/index.html
@@ -7,117 +7,23 @@
   <title>แนะนำตัวเอง</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="any1m.css">
+  
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-image: url('https://static.vecteezy.com/system/resources/previews/026/588/533/original/soft-colored-bokeh-background-vector.jpg');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-    }
-
-    .top-bar {
-      background: linear-gradient(90deg, #7b1fa2, #9c27b0);
-      color: white;
-      padding: 25px 20px;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 100px auto;
-      padding: 50px;
-      background: white;
-      border-radius: 50px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-      text-align: center;
-    }
-
-    #all {
-      padding: 20px;
-      /* เพิ่มระยะห่างภายในกรอบ */
-    }
-
-    .container.visible {
-      opacity: 1;
-      visibility: visible;
-      transform: translateY(0);
-    }
-
-    .profile-img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #7b1fa2;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #7b1fa2;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #9c27b0;
-    }
-
-    #bibi {
-      display: none;
-      margin: 0 auto;
-      display: block;
-      width: 100%;
-      /* ขยายให้พอดีกับความกว้างของคอนเทนเนอร์ */
-      max-width: 520px;
-      /* กำหนดขนาดสูงสุด */
-      height: auto;
-      /* ปรับความสูงตามสัดส่วนของภาพ */
-    }
-
-    #inter-container {
-      display: flex;
-      justify-content: center;
-      /* จัดตำแหน่งภาพกลางแนวนอน */
-      align-items: center;
-      /* จัดตำแหน่งภาพกลางแนวตั้ง */
-      height: 100vh;
-      /* ให้คอนเทนเนอร์มีความสูงเต็มหน้าจอ */
-    }
-
-    #inter {
-      max-width: 100%;
-      /* ทำให้ภาพไม่เกินขนาดของคอนเทนเนอร์ */
-      height: auto;
-      /* ปรับขนาดภาพตามสัดส่วน */
-    }
-
-    #allshow {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    
   </style>
 </head>
 
 <body>
-  <div>
-    <div class="top-bar">แนะนำตัวเอง</div>
-
-    <div id="allshow">
+  <div id="allall">
+    <div id="letgo" class="container1">
+      <img class="heart" src="/images/heart.png" alt="">
+      <br><br>
       <button id="showall" class="btn">แสดงทั้งหมด</button>
     </div>
+
     <div id="all">
+      <button class="back" id="back">กลับ</button>
       <div class="container">
         <button id="bibishow" class="btn">กดสิจ๊ะ</button>
         <br><br>
@@ -153,48 +59,8 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      // ซ่อนข้อความเมื่อโหลดหน้าเว็บ
-      document.getElementById('pi').style.display = 'none';
-
-      // เมื่อคลิกปุ่ม "#more"
-      document.getElementById('more').addEventListener('click', function () {
-        var pi = document.getElementById('pi');
-        if (pi.style.display === 'none') {
-          pi.style.display = 'block'; // แสดงข้อความ
-        } else {
-          pi.style.display = 'none'; // ซ่อนข้อความ
-        }
-      });
-
-      document.getElementById('bibi').style.display = 'none';
-
-      document.getElementById('bibishow').addEventListener('click', function () {
-        var bibi = document.getElementById('bibi');
-        if (bibi.style.display === 'none') {
-          bibi.style.display = 'block'; // แสดงข้อความ
-        } else {
-          bibi.style.display = 'none'; // ซ่อนข้อความ
-        }
-      });
-
-      document.getElementById('all').style.display = 'none';
-
-      document.getElementById('showall').addEventListener('click', function () {
-        var all = document.getElementById('all');
-        if (all.style.display === 'none') {
-          all.style.display = 'block';
-        } else {
-          all.style.display = 'none';
-        }
-      });
-
-    });
-
-
-  </script>
+ 
+ <script src="/any1y.js"></script>
 </body>
 
 </html>
