--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <br><br>
       <button id="showall" class="btn">แสดงทั้งหมด</button>
     </div>
-
+<img id="bibi" src="images/bibi.webp" alt="" height="850px" width="520px">
     <div id="all">
       <button class="back" id="back">กลับ</button>
       <div class="container">
