--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
 <body>
   <div id="allall">
     <div id="letgo" class="container1">
-      <img class="heart" src="/images/heart.png" alt="">
+      <img class="heart" src="images/heart.png" alt="">
       <br><br>
       <button id="showall" class="btn">แสดงทั้งหมด</button>
     </div>
-<img id="bibi" src="images/bibi.webp" alt="" height="850px" width="520px">
+
     <div id="all">
       <button class="back" id="back">กลับ</button>
       <div class="container">
