--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="allall">
     <div id="letgo" class="homepagebox">
-      <img class="heart" src="/images/heart.png" alt="">
+      <img class="heart" src="images/heart.png" alt="">
       <br><br>
      <div class="showall">
        <button id="showall" class="btnall">แสดงทั้งหมด</button>
@@ -30,20 +30,20 @@
       <!-- <button class="back" id="back1">กลับ1</button> -->
       <!-- <button class="back" id="back2">กลับ2</button> -->
       <div class="btnback">
-        <img id="back1" src="/images/back.png" alt="">
-        <img id="back2" src="/images/back.png" alt="">
+        <img id="back1" src="images/back.png" alt="">
+        <img id="back2" src="images/back.png" alt="">
       </div>
       <div id="cont1" class="pagebox">
 
         <div class="menu">
           <div id="menu1">
-            <img src="/images/vdo.png" alt="">
+            <img src="images/vdo.png" alt="">
           </div>
           <div id="menu2">
-            <img src="/images/Pic.png" alt="">
+            <img src="images/Pic.png" alt="">
           </div>
           <div id="menu3">
-            <img src="/images/text.png" alt="">
+            <img src="images/text.png" alt="">
           </div>
           <!-- <button id="menu1" class="menu">menu1</button>
         <br><br>
@@ -55,11 +55,11 @@
 
       <div id="cont2" class="pagebox">
         <div class="ani">
-          <img class="bb" src="/images/b6.jpg" alt="">
-          <img class="bb" src="/images/b2.jpg" alt="">
-          <img class="bb" src="/images/b3.jpg" alt="">
-          <img class="bb" src="/images/b4.jpg" alt="">
-          <img class="bb" src="/images/b5.jpg" alt="">
+          <img class="bb" src="images/b6.jpg" alt="">
+          <img class="bb" src="images/b2.jpg" alt="">
+          <img class="bb" src="images/b3.jpg" alt="">
+          <img class="bb" src="images/b4.jpg" alt="">
+          <img class="bb" src="images/b5.jpg" alt="">
         </div>
 
       </div>
@@ -67,7 +67,9 @@
       <div id="cont3" class="pagebox">
         <button id="bibishow" class="btn">กดสิจ๊ะ</button>
         <br><br>
-        <video id="ph1y" class="vdo1y" src="/images/1m.mp4" controls></video>
+        <video id="ph1y" class="vdo1y" src="https://www.youtube.com/watch?v=PBZFGmJKgAo&list=RDLhJMZ00otZM&index=2" controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PBZFGmJKgAo" frameborder="0" allowfullscreen></iframe>
+
         <!-- <br><br>
         <button id="more" class="btn">กดอีกก</button>
         <br><br>
@@ -92,7 +94,7 @@
       </div>
     </div>
   </div>
-  <script src="/any1y.js"></script>
+  <script src="any1y.js"></script>
 </body>
 
 </html>
