--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <button id="showall" class="btnall">แสดงทั้งหมด</button>
      </div> -->
         <div class="inlove">
-          <input class="textinput" type="text" id="textinput" placeholder="พิมพ์ 'วว/ดด/ปปปป' ที่คบกัน">
+          <input class="textinput" type="text" id="textinput" placeholder="'วว/ดด/ปปปป' ที่คบกัน">
           <button id="submitbtn" class="submitbtn">submit</button>
         </div>
       </div>
@@ -47,13 +47,13 @@
         <div id="cont1" class="pagebox">
 
           <div class="menu">
-            <div id="menu1">
+            <div id="menu1" class="btnmenu">
               <img src="images/vdo.png" alt="">
             </div>
-            <div id="menu2">
+            <div id="menu2" class="btnmenu">
               <img src="images/Pic.png" alt="">
             </div>
-            <div id="menu3">
+            <div id="menu3" class="btnmenu">
               <img src="images/text.png" alt="">
             </div>
             <!-- <button id="menu1" class="menu">menu1</button>
@@ -137,12 +137,10 @@
         </div>
       </div>
 
-      <audio id="bg-music" src="path/to/your/musicfile.mp3"></audio>
-
     </div>
   </main>
 
-  <script src="/any1y.js"></script>
+  <script src="any1y.js"></script>
 </body>
 
 </html>
