--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="allall">
       <div id="letgo" class="homepagebox">
         <div class="boxheart">
-        <img class="heart" src="images/heart.png" alt="">
+        <img class="heart" src="images/heart.pg" alt="">
         
       </div>
         <br><br>
